kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: medview-frontend-service
  namespace: medview
spec:
  selector:
    app: medview-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
